# Angle-Detection

./: CMakeCache.txt  CMakeLists.txt  Makefile  RedChannelExtractor  angleDetection.cpp  angleDetection.h  cmake_install.cmake  test.cpp
